Enable SafeRE Vector scanner in Rebar